...
    <!--Build tabs-->
    <string name="tab_overview">Overview</string>
    <string name="tab_changes">Changes</string>
    <string name="tab_tests">Tests</string>
    <string name="tab_build_log">Build Log</string>
    <string name="tab_artifacts">Artifacts</string>
    <string name="tab_parameters">Parameters</string>
    <string name="tab_snapshot_dependencies">Snapshot dependencies</string>

    <!--progress creating new account dialog-->
    <string name="progress_dialog_content">Please wait…</string>

    <!--create new account dialog-->

...
